[urgent fix] navbar overflowing on moible devices

--- a/src/index.css
+++ b/src/index.css
@@ -1,100 +1,102 @@
 @import "tailwindcss";
 
 html {
-    scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 
+html,
 body {
-    font-family: "Geist", sans-serif;
-    overflow-x: hidden;
+	font-family: "Geist", sans-serif;
+	overflow-x: hidden;
+	max-width: 100vw;
 }
 
 @layer base {
-    body {
-        @apply text-white;
-    }
-    h1 {
-        @apply font-light;
-    }
-    h2 {
-        @apply text-4xl bg-gradient-to-br from-[#F59047] to-[#FFEEE2] bg-clip-text text-transparent;
-    }
-    h3 {
-        @apply text-3xl text-white bg-clip-text;
-    }
-    p {
-        @apply text-white font-thin;
-    }
-    a {
-        @apply hover:scale-110;
-    }
+	body {
+		@apply text-white;
+	}
+	h1 {
+		@apply font-light;
+	}
+	h2 {
+		@apply text-4xl bg-gradient-to-br from-[#F59047] to-[#FFEEE2] bg-clip-text text-transparent;
+	}
+	h3 {
+		@apply text-3xl text-white bg-clip-text;
+	}
+	p {
+		@apply text-white font-thin;
+	}
+	a {
+		@apply hover:scale-110;
+	}
 }
 
 @theme {
-    --color-nearBlack: #050b10;
-    --color-darkNavy: #0d1a26;
-    --color-offWhite: #f4faff;
-    --color-spurOrange: #f59047;
-    --color-lightSpurOrange: #f59f47;
-    --color-spurOrangeText: #dea57c;
-    --color-mutedNavy: #2b3f53;
-    --color-spurTeal: #00bcd4;
+	--color-nearBlack: #050b10;
+	--color-darkNavy: #0d1a26;
+	--color-offWhite: #f4faff;
+	--color-spurOrange: #f59047;
+	--color-lightSpurOrange: #f59f47;
+	--color-spurOrangeText: #dea57c;
+	--color-mutedNavy: #2b3f53;
+	--color-spurTeal: #00bcd4;
 }
 
 .shadow-inner-custom {
-    box-shadow: inset 0 0 15px 5px rgba(255, 255, 255, 0.1),
-        inset 0 0 20px 5px rgba(255, 255, 255, 0.1);
+	box-shadow: inset 0 0 15px 5px rgba(255, 255, 255, 0.1),
+		inset 0 0 20px 5px rgba(255, 255, 255, 0.1);
 }
 
 /* Text Gradients */
 
 .text-gradient {
-    @apply bg-gradient-to-l from-spurOrange via-lightSpurOrange to-offWhite bg-clip-text text-transparent;
+	@apply bg-gradient-to-l from-spurOrange via-lightSpurOrange to-offWhite bg-clip-text text-transparent;
 }
 
 .text-gradient-reverse {
-    @apply bg-gradient-to-r from-spurOrange via-lightSpurOrange to-offWhite bg-clip-text text-transparent;
+	@apply bg-gradient-to-r from-spurOrange via-lightSpurOrange to-offWhite bg-clip-text text-transparent;
 }
 
 /* Slider Carousel  */
 @layer utilities {
-    @keyframes marquee-left {
-        from {
-            transform: translateX(0);
-        }
-        to {
-            transform: translateX(-50%);
-        }
-    }
+	@keyframes marquee-left {
+		from {
+			transform: translateX(0);
+		}
+		to {
+			transform: translateX(-50%);
+		}
+	}
 
-    @keyframes marquee-right {
-        from {
-            transform: translateX(-50%);
-        }
-        to {
-            transform: translateX(0);
-        }
-    }
+	@keyframes marquee-right {
+		from {
+			transform: translateX(-50%);
+		}
+		to {
+			transform: translateX(0);
+		}
+	}
 
-    /* Carousel/Slider Animation (logo slider) */
-    .animate-marquee-left {
-        animation: marquee-left linear infinite;
-    }
+	/* Carousel/Slider Animation (logo slider) */
+	.animate-marquee-left {
+		animation: marquee-left linear infinite;
+	}
 
-    .animate-marquee-right {
-        animation: marquee-right linear infinite;
-    }
+	.animate-marquee-right {
+		animation: marquee-right linear infinite;
+	}
 
-    .paused {
-        animation-play-state: paused !important;
-    }
+	.paused {
+		animation-play-state: paused !important;
+	}
 
-    /* Hide Scrollbar */
-    .no-scrollbar::-webkit-scrollbar {
-        display: none;
-    }
-    .no-scrollbar {
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-    }
+	/* Hide Scrollbar */
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
+	.no-scrollbar {
+		-ms-overflow-style: none;
+		scrollbar-width: none;
+	}
 }
